# omgbot

./: .eslintrc.json  .gitignore  .markdownlintignore  .mocharc.json  .prettierignore  .yamllint.yaml  .yamllint.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md  build-container  eslint.config.mjs  omg.rb  package-lock.json  package.json  pnpm-lock.yaml  run  start.sh  stryker.config.mjs  tsconfig.json  vitest.config.mts
.github/workflows/: build.yml  code-checks.yml  lint.yaml  release.yml
sounds/: fif
src/: audio.rs  cli.rs  commands.rs  config.rs  events.rs  files.rs  handler.rs  main.rs  server.mts  server.ts  sound_picker.rs  soundbank.rs  sounds.ts  util.rs
src/audio/: mod.rs
src/command/: parseBangCommand.mts  parseBangCommand.test.mts  parseBangCommand.test.ts  parseBangCommand.ts
src/command/commands/: Command.d.ts  Command.mts  HelpCommand.mts  HelpCommand.ts  InvalidCommand.mts  InvalidCommand.ts  PlayRandomSoundCommand.mts  PlayRandomSoundCommand.ts  PlaySoundCommand.mts  PlaySoundCommand.ts  PlaySoundFromCategoryCommand.mts  PlaySoundFromCategoryCommand.ts  StatsCommand.mts  StatsCommand.ts  StatsCommandRunner.mts  StatsCommandRunner.ts
src/commands/: help.rs  mod.rs  stats.rs
src/events/: mod.rs  onMessage.ts  onMessageCreate.mts  onMessageCreate.ts  onReady.ts  on_message.rs  on_ready.rs  on_voice_state_update.rs  track_end.rs
src/random/: sample.mts  sample.ts
src/sound/: playSound.mts  playSound.ts  soundUtils.mts  soundUtils.test.mts  soundUtils.test.ts  soundUtils.ts
test/: testParseBangCommand.ts
test/command/: testParseBangCommand.ts
test/sounds/: testSoundUtils.ts
