[package]
name = "omgbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["cargo", "derive", "env"] }
rand = "0.9.2"
serenity = { version = "0.12.5", features = ["voice"] }
songbird = "0.5.0"
symphonia = { version = "0.5.5", features = ["mp3"] }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
