[package]
name = "omgbot"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["cargo", "derive", "env"] }
rand = "0.10.0"
serenity = { version = "0.12.5", features = ["voice"] }
songbird = { version = "0.6.0" }
symphonia = { version = "0.5.5", features = ["mp3"] }
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
